<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="startBracket">(</string>
    <string name="endBracket">)</string>
    <string name="divideSymbol">/</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply_symbol">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="sub_symbol">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add_symbol">+</string>
    <string name="decimal_symbol">.</string>
    <string name="zero">0</string>
    <string name="c">C</string>
    <string name="equal">=</string>
    <string name="_7">7</string>
</resources>
